--- a/Páginas/produtos.html
+++ b/Páginas/produtos.html
@@ -6,9 +6,16 @@
     <title>Produtos</title>
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary fixed-top">
+    <!-- nav-bar -->
+    <nav class="navbar bg-body-tertiary fixed-top border border-primary">
         <div class="container-fluid">
-          <img src="../Data/logkk.png"  class="Logo">
+          <div class="d-flex justify-content-start">
+            <img src="../Data/logkk.png"  class="Logo mx-2">
+            <form class="d-flex" role="search">
+              <input class="form-control border border-dark" type="search" placeholder="Pesquisar" aria-label="Search">
+              <button class="btn btn-success" type="submit">Pesquisar</button>
+            </form>
+          </div>
           <h2 class="navbar-brand">Unimarket</h2>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,14 +49,24 @@
                   </ul>
                 </li>
               </ul>
-              <form class="d-flex mt-3" role="search">
-                <input class="form-control me-2 border border-dark" type="search" placeholder="Pesquisar" aria-label="Search">
-                <button class="btn btn-success" type="submit">Pesquisar</button>
-              </form>
             </div>
           </div>
         </div>
       </nav>
+      <!-- fim da nav-bar -->
+      <div>
+        <!-- CARDS -->
+        <div>
+          <div class="card my-2 mx-2" style="width: 18rem;">
+            <img src="../Data/ImgProd/Caneta.jpg" class="card-img-top" alt="Imagem Produto">
+            <div class="card-body col-12">
+              <h5 class="card-title">Violão</h5>
+              <p class="card-text">R$ 9,99</p>
+              <a href="#" class="btn btn-primary col-12">Adicionar ao carrinho!</a>
+            </div>
+          </div>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
