Feito o cadastro de novos produtos

--- a/Code/index.html
+++ b/Code/index.html
@@ -12,7 +12,7 @@
         <video autoplay muted loop src="./Data/Planodefundo.mp4"></video>
         </div>
         <div>
-            <img src="./Data/log.png"  class="Logo">
+            <img src="./Data/log.png"  class="Logocustom">
             <h1 class="animated-heading">Da minha mochila para a sua, produtos nota 10 em qualidade.</h1>
             <a href="./Páginas/produtos.html"><button class="button">Vamos às compras!</button></a>
         </div>
