--- a/Code/Páginas/produtos.html
+++ b/Code/Páginas/produtos.html
@@ -10,7 +10,7 @@
     <nav class="navbar bg-body-tertiary fixed-top border border-primary">
         <div class="container-fluid">
           <div class="d-flex justify-content-start">
-            <img src="../Data/logkk.png"  class="Logo mx-2">
+            <img src="../Data/logkk.png" class="Logo mx-2">
             <form class="d-flex" role="search">
               <input class="form-control border border-dark" type="search" placeholder="Pesquisar" aria-label="Search">
               <button class="btn btn-success" type="submit">Pesquisar</button>
@@ -34,18 +34,18 @@
                   <a class="nav-link" href="./produtos.html">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./produtos.html">Carrinhosssss</a>
+                    <a class="nav-link" href="./produtos.html">Carrinho</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Perfil
+                    ADMIN
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Login</a></li>
+                    <li><a class="dropdown-item" href="./addProduto.html">Adicionar</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">Registrar</a></li>
+                    <li><a class="dropdown-item" href="#">Remover</a></li>
                   </ul>
                 </li>
               </ul>
