--- a/Code/Páginas/addProduto.html
+++ b/Code/Páginas/addProduto.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <title>Adicionar Produto</title>
     <script src="../PastaJS/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div class="row col-12 vh-100 bg-info d-flex justify-content-center align-items-center">
