--- a/Code/Páginas/produtos.html
+++ b/Code/Páginas/produtos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <title>Produtos</title>
+    <script src="../PastaJS/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <!-- nav-bar -->
@@ -56,17 +58,7 @@
       <!-- fim da nav-bar -->
       <div>
         <!-- CARDS -->
-        <div>
-          <div class="card my-2 mx-2" style="width: 18rem;">
-            <img src="../Data/ImgProd/Caneta.jpg" class="card-img-top" alt="Imagem Produto">
-            <div class="card-body col-12">
-              <h5 class="card-title">Violão</h5>
-              <p class="card-text">R$ 9,99</p>
-              <a href="#" class="btn btn-primary col-12">Adicionar ao carrinho!</a>
-            </div>
-          </div>
-        </div>
+        <div id="cards"></div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
