--- a/Code/Páginas/produtos.html
+++ b/Code/Páginas/produtos.html
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./produtos.html">Carrinho</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pagamento.html">Pagamento</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 ADMIN
